// This file is part of OpenTSDB.
// Copyright (C) 2018  The OpenTSDB Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

option java_package = "net.opentsdb.data.pbuf";
option java_outer_classname = "TimeSeriesPB";

import "TimeSeriesData.proto";
import "TimeSeriesId.proto";

/*
 * A net.opentsdb.data.TimeSeries object containing an ID and various
 * data types.
 */
message TimeSeries {
  /* The time series ID. */
  TimeSeriesId id = 1;
  
  /* One or more types of data. E.g. NumericSequence. */
  repeated TimeSeriesData data = 2;
}
